tests/baselines/reference/import_unneeded-require-when-referenecing-aliased-type-throug-array.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
a.ts(4,9): error TS2454: Variable 'testData' is used before being assigned.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== a.ts (1 errors) ====
    /// <reference path="b.ts" />
    import ITest = require('ITest');
    var testData: ITest[];
    var p = testData[0].name;
            ~~~~~~~~
!!! error TS2454: Variable 'testData' is used before being assigned.
     
==== b.ts (0 errors) ====
    declare module "ITest" {
        interface Name {
            name: string;
        }
        export = Name;
    }
    